Prevent overlap

--- a/public/css/timeseries_style.css
+++ b/public/css/timeseries_style.css
@@ -2,6 +2,10 @@
   margin-top: 20px;
 }
 
+#side_panel {
+  width: 270px;
+}
+
 h2 {
 	font-family: Franklin Gothic Medium, UnDotum, Helvetica, Arial;
 	font-weight: normal;
